--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==4.0.5
 django-filter==21.1
 djangorestframework==3.13.1
 Markdown==3.3.7
+Pillow==9.2.0
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
 pycodestyle==2.8.0
